--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <div class="button-div">
+        <div class="bottom-div">
             <div class="chart-view">
                 <p id='chart-view-p' style="margin-left: 10px;margin-top: 8px;margin-bottom: 8px;"></p>
                 <div class='angle-chart-box'>
